tests/rosetta/out/Smalltalk/babbage-problem.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| target modulus n square ending |
Object subclass: #BreakSignal instanceVariableNames: '' classVariableNames: '' poolDictionaries: '' category: nil!.
target := 269696.
modulus := 1000000.
n := 1.
[.
[true] whileTrue: [.
square := (n * n).
ending := (square % modulus).
((ending = target)) ifTrue: [
Transcript show: ((((((('The smallest number whose square ends with ') + ((target asString)))) + (' is '))) + ((n asString)))) printString; cr.
BreakSignal signal.
] .
n := (n + 1).
].
] on: BreakSignal do: [:ex | ].
